<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:theme="@style/ThemeOverlay.AnimalRecognizer.FullscreenContainer"
    tools:context=".FullScreenImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/fullScreenImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/image_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_navy"
            android:gravity="center"
            android:paddingTop="8dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_24dp"
        android:contentDescription="@string/cerrar"
        android:layout_gravity="top|end"
        android:layout_margin="16dp"
        app:tint="@android:color/black" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/anterior"
            android:layout_gravity="start|center_vertical"
            app:tint="@android:color/black" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/siguiente"
            android:layout_gravity="end|center_vertical"
            app:tint="@android:color/black" />
    </FrameLayout>
</FrameLayout>